Correct z-index errors on homepage

--- a/homerate/reviews/static/css/base.scss
+++ b/homerate/reviews/static/css/base.scss
@@ -153,12 +153,12 @@ a {
 /* Site homepage */
 .fade {
   width: 100%;
-  height: 100%;
+  height: 30%;
   left: 0;
-  top: 0;
+  bottom: 0;
   position: fixed;
   z-index: 100;
-  background: linear-gradient(180deg, rgba(246,248,250,0) 80%, rgba(246,248,250,1) 100%);
+  background: linear-gradient(180deg, rgba(246,248,250,0) 0%, rgba(246,248,250,1) 100%);
 }
 
 .homepage {
